<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AACFD0"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50sp"
        android:background="@color/background_button_color"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@color/black"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="60sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginBottom="20sp"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_up_logo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/sign_up_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="#D1DDDD"
        android:hint="@string/sign_up_first_name"
        android:minHeight="48dp"
        android:paddingVertical="10sp"
        android:textAlignment="center"
        android:textColorHint="#610E0E0E"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:layout_below="@id/sign_up"/>
    <EditText
        android:id="@+id/sign_up_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="#D1DDDD"
        android:hint="@string/sign_up_last_name"
        android:minHeight="48dp"
        android:paddingVertical="10sp"
        android:textAlignment="center"
        android:textColorHint="#610E0E0E"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:layout_below="@id/sign_up_first_name"/>
    <EditText
        android:id="@+id/sign_up_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="#D1DDDD"
        android:hint="@string/sign_up_phone"
        android:minHeight="48dp"
        android:paddingVertical="10sp"
        android:textAlignment="center"
        android:textColorHint="#610E0E0E"
        android:textSize="20sp"
        android:inputType="phone"
        android:layout_below="@id/sign_up_last_name"/>
    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="#D1DDDD"
        android:hint="@string/sign_up_password"
        android:minHeight="48dp"
        android:paddingVertical="10sp"
        android:textAlignment="center"
        android:textColorHint="#610E0E0E"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_below="@id/sign_up_phone"/>
    <EditText
        android:id="@+id/sign_up_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="#D1DDDD"
        android:hint="@string/sign_up_password_repeat"
        android:minHeight="48dp"
        android:paddingVertical="10sp"
        android:textAlignment="center"
        android:textColorHint="#610E0E0E"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_below="@id/sign_up_password"/>

    <Button
        android:id="@+id/sign_up_main_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_password_repeat"
        android:layout_marginHorizontal="10sp"
        android:background="#79A8A9"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_up_main_btn"
        android:textSize="16sp"
        android:layout_marginTop="20sp"/>
</RelativeLayout>



